# cargo-set-version

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: lib_tests.rs
