[package]
name = "cargo-set-version"
version = "0.0.3"
edition = "2024"
description = "A Cargo subcommand to set versions for crates in a workspace."
license = "MIT"
repository = "https://github.com/piot/cargo-set-version"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "command-line-utilities"
]
keywords = ["cargo", "dependencies"]

[dependencies]
toml_edit = "0.23"
cargo_metadata = "0.23"
anyhow = "1.0"
semver = "1.0"
